[package]
name = "xitca-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xitca-web"
path = "./src/main.rs"
required-features = ["io-uring", "pg", "router"]

[features]
pg = ["dep:xitca-postgres"]
router = ["xitca-http/router"]
io-uring = ["dep:tokio-uring", "xitca-http/io-uring", "xitca-server/io-uring"]

[dependencies]
xitca-http = "0.7"
xitca-server = "0.5"
xitca-service = "0.3"
serde = { version = "1" }
serde_json = { version = "1" }
xitca-postgres = { version = "0.3", optional = true }
tokio = "*"
tokio-uring = { version = "0.5", optional = true }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "3"
panic = "abort"
codegen-units = 1
debug = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "512e9de" }
xitca-http = { git = "http://github.com/HFQR/xitca-web", rev = "1de8d9c" }
xitca-postgres = { git = "http://github.com/HFQR/xitca-web", rev = "1de8d9c" }
xitca-server = { git = "http://github.com/HFQR/xitca-web", rev = "1de8d9c" }
xitca-service = { git = "http://github.com/HFQR/xitca-web", rev = "1de8d9c" }
